
include(${CMAKE_ROOT}/Modules/FindPerl.cmake)
#FindPerl( PERL_FOUND PERL_EXECUTABLE PERL_VERSION_STRING )

install(DIRECTORY  ${CMAKE_CURRENT_SOURCE_DIR}
  DESTINATION  ${CMAKE_INSTALL_PREFIX}
  CONFIGURATIONS DEBUG|RELEASE
  PATTERN "backups/*" EXCLUDE
  PATTERN "*.txt" EXCLUDE
  PATTERN "*.env" EXCLUDE
  PATTERN "*.pl"
  PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ
  )

